<?xml version="1.0"?>
<package format="3">
	<name>embla_hardware</name>
	<version>2.0.0</version>
	<description>ROS 2 package for JWRobotics JWR-02 Embla robot with controller/driver/hardware interface and motor controller</description>
	<maintainer email="jens@jwrobotics.com">Jens Willy Johannsen</maintainer>
	<license>MIT</license>
	<author email="jens@jwrobotics.com">Jens Willy Johannsen</author>

	<buildtool_depend>ament_cmake</buildtool_depend>

	<depend>rclcpp</depend>
	<depend>std_msgs</depend>
	<depend>std_srvs</depend>
	<depend>geometry_msgs</depend>

	<build_depend>rosidl_default_generators</build_depend>
	<exec_depend>rosidl_default_runtime</exec_depend>
	<member_of_group>rosidl_interface_packages</member_of_group>

	<!-- More to come... -->

	<exec_depend>ros2launch</exec_depend>

	<export>
		<build_type>ament_cmake</build_type>
	</export>

</package>

<!-- OLD:
<?xml version="1.0"?>
<package format="2">
	<name>embla_hardware</name>
	<version>0.9.0</version>
	<description>JWRobotics JWR-01 Embla robot controller/driver/hardware interface</description>

	<author email="jens@jwrobotics.com">Jens Willy Johannsen</author>
	<maintainer email="jens@jwrobotics.com">Jens Willy Johannsen</maintainer>

	<license>MIT</license>

	<buildtool_depend>catkin</buildtool_depend>

	<build_depend>controller_manager</build_depend>
	<build_depend>diagnostic_updater</build_depend>
	<build_depend>diagnostic_msgs</build_depend>
	<build_depend>hardware_interface</build_depend>
	<build_depend>roscpp</build_depend>
	<build_depend>roslaunch</build_depend>
	<build_depend>sensor_msgs</build_depend>
	<build_depend>message_generation</build_depend>
	<build_depend>std_msgs</build_depend>
	<build_depend>robot_state_publisher</build_depend>
	<build_depend>i2c_service</build_depend>
	<build_depend>kdl_parser</build_depend>

	<exec_depend>controller_manager</exec_depend>
	<exec_depend>diagnostic_updater</exec_depend>
	<exec_depend>diagnostic_msgs</exec_depend>
	<exec_depend>diagnostic_aggregator</exec_depend>
	<exec_depend>diff_drive_controller</exec_depend>
	<exec_depend>geometry_msgs</exec_depend>
	<exec_depend>hardware_interface</exec_depend>
	<exec_depend>roscpp</exec_depend>
	<exec_depend>sensor_msgs</exec_depend>
	<exec_depend>message_runtime</exec_depend>
	<exec_depend>std_msgs</exec_depend>
	<exec_depend>robot_state_publisher</exec_depend>
	<exec_depend>i2c_service</exec_depend>
	<exec_depend>kdl_parser</exec_depend>
	<exec_depend>robot_localization</exec_depend>
</package>
-->